--- a/DiscordQuickMessage/DiscordQuickMessage.csproj
+++ b/DiscordQuickMessage/DiscordQuickMessage.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.9.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="OpenAI" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
