--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Build
       run: dotnet build DiscordQuickMessage --no-restore
     - name: Test
-      run: dotnet test DiscordQuickMessageTests --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
